--- a/code-along.css
+++ b/code-along.css
@@ -7,8 +7,11 @@
   width: 20%;
   margin: auto;
   display: inline-block;
+  transition: translatex(140px);
 }
-
+.transform-demo:hover > div {
+  transform: translateX(150px);
+}
 /****************************************
 * Transition
 ****************************************/
@@ -18,11 +21,12 @@
   width: 200px;
   height: 200px;
   filter: grayscale(100%);
-
+  transition: 5s;
 }
 
 .transition-demo img:hover {
-
+  filter: none;
+  transform: scale(1.25) rotate(180deg);
 }
 
 /****************************************
@@ -35,11 +39,15 @@
   width: 500px;
   margin: auto;
   background-color: palegreen;
-
+  animation-name:sale-bar;
+  animation-duration: 1s;
+  animation-iteration-count: 15;
 }
 
 @keyframes sale-bar {
   0% { background-color: lightgreen; width: 450px }
-  75% { background-color: #FF033E; width: 125x }
+  25% { background-color: rgb(33, 45, 33); width: 3750px }
+  50% { background-color: rgb(164, 157, 195); width: 125px }
+  75% { background-color: #ee05bc; width: 50x }
   100% { background-color: crimson; width: 10px }
 }
